--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 TWILIO_NOBODY_WORKFLOW_SID=
 TWILIO_WORKSPACE_SID=
-PHONE_LIST_URL=
+PHONE_LIST_URL='/SMRedirectory.json'
+
+SALESFORCE_PASSWORD=
+SALESFORCE_USERNAME=
+
+JSFORCE_URL=
