--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,8 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env.dev
+.env.prod
 .env
 
 # parcel-bundler cache (https://parceljs.org/)
