--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@ PHONE_LIST_URL='/SMRedirectory.json'
 SALESFORCE_PASSWORD=
 SALESFORCE_USERNAME=
 
+# Don't include this variables if this is your production .env
 JSFORCE_URL=
