--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "deploy": "twilio-run deploy"
   },
   "dependencies": {
-    "twilio": "^3.56",
-    "@twilio/runtime-handler": "1.2.1"
+    "@twilio/runtime-handler": "1.2.1",
+    "jsforce": "^1.11.0",
+    "twilio": "^3.56"
   },
   "devDependencies": {
     "twilio-run": "^3.4.0"
